--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,4 @@
 <% title(@project.name, "Projects") %>
 <h1><%= @project.name %></h1>
+<p><%= link_to "Edit project", edit_project_path(@project) %></p>
 <p><%= @project.description %></p>
