--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,8 @@
 <% title(@project.name, "Projects") %>
 <h1><%= @project.name %></h1>
 <p><%= link_to "Edit project", edit_project_path(@project) %></p>
+<p><%= link_to "Delete project",
+    project_path(@project),
+    method: :delete,
+    data: {confirm: "You sure?"} %></p>
 <p><%= @project.description %></p>
