--- a/app/views/edit.html.erb
+++ b/app/views/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Edit Project</h1>
+jejejejejeje
+<div class="page-header">
+
+    <h1><%= @project.name %></h1>
+    <ul class="actions">
+        <li><%= link_to fa_icon("pencil") + " Edit Project", edit_project_path(@project), class: "btn btn-primary" %></li>
+    </ul>
+</div>
 <%= render 'form', project: @project %>
