--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Edit Project</h1>
+<header>
+    <h1><%= @project.name %></h1>
+    <ul class="actions">
+        <li><%= link_to fa_icon("pencil") + " Edit Project", edit_project_path(@project), class: "btn btn-primary" %></li>
+        <li><%= link_to fa_icon("trash") + " Delete Project",
+            project_path(@project),
+            method: :delete,
+            data: {confirm: "Are you sure dude?" },
+            class: "btn btn-danger" %>
+    </li>
+    </ul>
+</header>
 <%= render 'form', project: @project %>
