--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,3 @@
-<% title(@project.name, "Projects") %>
-<header>
 <h1><%= @project.name %></h1>
 <p><%= @project.description %></p>
 
@@ -13,6 +11,7 @@
             method: :delete,
             data: {confirm: "You sure?"},
             class: "delete" %>
-    </li>
+</li>
+<li> <%= link_to "New Ticket", new_project_ticket_path(@project), class: "new"  %></li>
 </ul>
 </header>
