Tickets can now be edited

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,6 +15,6 @@
 
 <ul id="tickets">
     <% @project.tickets.each do |ticket| %>
-        <li>#<%= ticket.id %> - <%= link_to ticket.name, [@project, ticket] %></li>
+        <li>#<%= ticket.id %> - <%= link_to ticket.name, [@project, ticket] %> | <%= link_to "Edit Ticket", edit_project_ticket_path(@project, ticket) %></li>
     <% end %>
 </ul>
