--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -5,6 +5,7 @@
 
     <header>
         <h2><%= @ticket.name %></h2>
+        <%= link_to "Edit Ticket", edit_project_ticket_path(@project,@ticket), class: "edit" %>
     </header>
 
     <%= simple_format(@ticket.description)%>
