--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -6,6 +6,7 @@
     <header>
         <h2><%= @ticket.name %></h2>
         <%= link_to "Edit Ticket", edit_project_ticket_path(@project,@ticket), class: "edit" %>
+        <%= link_to "Delete Ticket", project_ticket_path(@project,@ticket), method: :delete, data: {confirm: "You sure??"}, class: "delete" %>
     </header>
 
     <%= simple_format(@ticket.description)%>
