--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -7,6 +7,7 @@
         <h2><%= @ticket.name %></h2>
         <%= link_to "Edit Ticket", edit_project_ticket_path(@project,@ticket), class: "edit" %>
         <%= link_to "Delete Ticket", project_ticket_path(@project,@ticket), method: :delete, data: {confirm: "You sure??"}, class: "delete" %>
+        <%= link_to "Go back", projects_path, class: "back" %>
     </header>
 
     <%= simple_format(@ticket.description)%>
