--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,8 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "projects";
+@import "tickets";
+@import "admin/application";
 
 // typography
 html {font-size: 1em;}
